[package]
name = "suitui"
version = "0.1.0"
edition = "2024"
description = "A terminal UI for managing your Sui wallet"
license = "MIT"
repository = "https://github.com/wbbradley/suitui"
readme = "README.md"
keywords = ["sui", "wallet", "tui", "blockchain"]
categories = ["command-line-utilities"]

[dependencies]
ratatui = "0.30.0"
crossterm = "0.29.0"
anyhow = "1.0.102"
home = "0.5.12"
tokio = { version = "1", features = ["full"] }
sui-rpc = { git = "https://github.com/MystenLabs/sui-rust-sdk.git", version = "0.2.2" }
futures = "0.3.32"
clap = { version = "4.6.0", features = ["derive"] }
sui-sdk-types = { version = "0.2.2", features = ["serde", "hash", "rand"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
serde_json = "1.0.149"
base64ct = { version = "1.8.3", features = ["alloc"] }

[dev-dependencies]
tempfile = "3.27.0"
